Fix numbers from jumping in track video indicators

--- a/app/javascript/components/Tracks/Track/TrackVideo/styles.module.scss
+++ b/app/javascript/components/Tracks/Track/TrackVideo/styles.module.scss
@@ -1,6 +1,6 @@
 .indicators {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
   width: 100%;
   padding: 1rem 0;
 }
@@ -30,15 +30,18 @@
   display: grid;
   flex-shrink: 1;
   grid-column-gap: 0.5rem;
-  grid-template-columns: 1fr 30px;
+  grid-template-columns: 60% 40%;
 
   .value {
     grid-column: 1;
-    width: 70px;
+
+    text-align: right;
   }
 
   .title {
     grid-column: 1/3;
+
+    text-align: center;
   }
 
   .angle {
